# ascii_video_player

./: AsciiVideoPlayer  README.md  ascii_video.cpp  ascii_video.py  braille_patterns.txt
cpp/: AsciiVideoPlayer.cpp  AsciiVideoPlayer.cpp.bak  AsciiVideoPlayer2.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
python/: ascii_video.py  list_braille_patterns.py
