SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
cmake_minimum_required(VERSION 2.8)
project( AsciiVideoPlayer )
find_package( OpenCV REQUIRED )
find_package( Curses REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${Curses_INCLUDE_DIRS} )
add_executable( AsciiVideoPlayer AsciiVideoPlayer.cpp )
target_link_libraries( AsciiVideoPlayer ${OpenCV_LIBS} ${Curses_LIBS} ncursesw)
